<resources>
    <string name="app_name">LibsGisk</string>
    <string name="app_name1">LibsGisk-1</string>
    <string name="app_name2">LibsGisk-2</string>
    <string name="action_settings">Settings</string>

    <string name="label_lag_config">ConfigActivity</string>
    <string name="label_lag_rvdemo">RecyclerViewActivity</string>
    <string name="test_text">这是原本的话.</string>

    <string name="main_text">Libs List</string>

    <string name="showcase_view_close">关闭</string>

    <string-array name="labels_main">
        <item>语言切换</item>
        <item>Activity过场动画</item>
        <item>SettingPreferences选项菜单</item>
        <item>RecyclerView 使用</item>
        <item>BroadcastReceiver</item>
        <item>Service</item>
        <item>Widget</item>
        <item>Animation</item>
        <item>Dialog</item>

    </string-array>

    <string-array name="labels_rv">
        <item>RecyclerView(一)</item>
        <item>RecyclerView(二)</item>
        <item>RecyclerView(三)</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
