<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:orderingFromXml="true"
    android:defaultValue="true">

    <SwitchPreference
        android:defaultValue="true"
        android:key="example_switch"
        android:summary="@string/pref_description_social_recommendations"
        android:title="@string/pref_title_social_recommendations" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textSize="22sp"
        android:title="@string/pref_title_display_name"
        android:drawableLeft="@android:drawable/ic_secure"/>

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_add_friends_to_messages" />

    <PreferenceCategory android:title="第二组" >
        <MultiSelectListPreference
            android:title="第一项"
            android:entries="@array/pref_example_list_titles"
            android:entryValues="@array/pref_example_list_values"
            android:dialogTitle="item 1 title"
            android:dialogIcon="@android:drawable/ic_dialog_info"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:order="1"
            android:key="item1_pref_setting"/>
        <SwitchPreference
            android:title="是否加密"
            android:icon="@android:drawable/ic_secure"
            android:summary="加密传输信息，保证信息安全"
            android:key="item2_pref_setting"/>
    </PreferenceCategory>
</PreferenceScreen>
